--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -1,4 +1,20 @@
 #home {
   height: 100svh;
   background: rgb(244, 19, 47);
+  overflow: hidden;
+}
+
+video {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+img.title {
+  position: absolute;
+  right: 5vw;
+  top: 10svh;
+  z-index: 5;
+  width: 30vw;
+  height: auto;
 }
