--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -18,3 +18,12 @@ img.title {
   width: 30vw;
   height: auto;
 }
+
+#countdownOverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 10;
+}
