--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,3 +5,17 @@
   margin: 0;
   padding: 0;
 }
+
+.gridCenter {
+  display: grid;
+  place-content: center;
+}
+
+.flex {
+  display: flex;
+}
+
+.flexColumn {
+  display: flex;
+  flex-direction: column;
+}
