--- a/src/css/home.css
+++ b/src/css/home.css
@@ -58,7 +58,7 @@ video {
   position: absolute;
   top: 0;
   left: 50%;
-  transform: translate(-50%, 0);
+  transform: translateX(-50%);
   z-index: 10;
   /* width: 100%; */
   width: auto;
